# puzzles-onboard

./: .gitignore  Dockerfile  README.md  requirements.txt
scripts/: app.py  cleanup_test_run.py  onboard_client.py  template_maps.py
wrappers/asana/: pyproject.toml
wrappers/asana/asana_wrapper/: __init__.py  _secrets.py  asana_client.py  projects.py  search.py  subtask_inheritance.py  tasks.py  users.py
wrappers/clockify/: pyproject.toml
wrappers/clockify/clockify_wrapper/: __init__.py  _base.py  _secrets.py  clients.py  projects.py  reports.py
wrappers/google/: pyproject.toml
wrappers/google/google_wrapper/: __init__.py  _base.py  _secrets.py  docs.py  drive.py  gmail.py
wrappers/jira/: pyproject.toml
wrappers/jira/jira_wrapper/: __init__.py  _base.py
wrappers/supabase/: pyproject.toml
wrappers/supabase/supabase_wrapper/: __init__.py  _base.py  _secrets.py  cli.py  rest.py  sql.py
wrappers/telegram/: pyproject.toml
wrappers/telegram/telegram_wrapper/: __init__.py  _base.py  _secrets.py  messages.py
