[project]
name = "jira-wrapper"
version = "0.1.0"
description = "Multi-instance Jira Cloud REST API wrapper with Doppler auth"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jira_wrapper*"]
