[project]
name = "supabase_wrapper"
version = "1.0.0"
description = "Supabase multi-project database wrapper — REST CRUD, raw SQL, connection management with pooler fallback"
requires-python = ">=3.9"
dependencies = [
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.28.0",
]

[project.scripts]
supabase-sql = "supabase_wrapper.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["supabase_wrapper*"]
